--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,10 @@ rootProject.name = 'profect-eatcloud-msa-v1'
 
 include 'eureka-server'
 include 'api-gateway'
+// include 'auth-service'
+// include 'customer-service'
+// include 'admin-service'
+// include 'owner-service'
+// include 'store-service'
+include 'order-service'
+// include 'payment-service'
