--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,30 @@ services:
       - eatcloud-network
     restart: unless-stopped
 
+  order-service:
+    build:
+      context: .
+      dockerfile: order-service/Dockerfile
+    container_name: order-service
+    ports:
+      - "8086:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: dev
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: order_db
+      DB_USER: eatcloud_user
+      DB_PASSWORD: devpassword123
+      REDIS_HOST: redis
+    depends_on:
+      - eureka-server
+      - eatcloud-db
+      - redis
+    networks:
+      - eatcloud-network
+    restart: unless-stopped
+
   api-gateway:
     build:
       context: .
@@ -63,7 +87,7 @@ services:
       POSTGRES_DB: eatcloud_db
       POSTGRES_USER: eatcloud_user
       POSTGRES_PASSWORD: devpassword123
-      POSTGRES_MULTIPLE_DATABASES: user_db,store_db,order_db,payment_db
+      POSTGRES_MULTIPLE_DATABASES: auth_db,customer_db,admin_db,owner_db,store_db,order_db,payment_db
     volumes:
       - eatcloud_db_data:/var/lib/postgresql/data
       - ./deploy/compose/scripts/create-multiple-databases.sh:/docker-entrypoint-initdb.d/00-create-multiple-databases.sh:ro
