--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@ include 'api-gateway'
 // include 'admin-service'
 // include 'owner-service'
 // include 'store-service'
-include 'order-service'
+// include 'order-service'
 // include 'payment-service'
