--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,29 +24,29 @@ services:
       - eatcloud-network
     restart: unless-stopped
 
-  order-service:
-    build:
-      context: .
-      dockerfile: order-service/Dockerfile
-    container_name: order-service
-    ports:
-      - "8086:8080"
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-      DB_HOST: eatcloud-db
-      DB_PORT: 5432
-      DB_NAME: order_db
-      DB_USER: eatcloud_user
-      DB_PASSWORD: devpassword123
-      REDIS_HOST: redis
-    depends_on:
-      - eureka-server
-      - eatcloud-db
-      - redis
-    networks:
-      - eatcloud-network
-    restart: unless-stopped
+#  order-service:
+#    build:
+#      context: .
+#      dockerfile: order-service/Dockerfile
+#    container_name: order-service
+#    ports:
+#      - "8086:8080"
+#    environment:
+#      SPRING_PROFILES_ACTIVE: dev
+#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+#      DB_HOST: eatcloud-db
+#      DB_PORT: 5432
+#      DB_NAME: order_db
+#      DB_USER: eatcloud_user
+#      DB_PASSWORD: devpassword123
+#      REDIS_HOST: redis
+#    depends_on:
+#      - eureka-server
+#      - eatcloud-db
+#      - redis
+#    networks:
+#      - eatcloud-network
+#    restart: unless-stopped
 
   api-gateway:
     build:
