--- a/deploy/compose/.yml
+++ b/deploy/compose/.yml
@@ -113,167 +113,167 @@ services:
   # Microservices (commented out - uncomment when ready to use)
   # All services will connect to the single eatcloud-db instance
   
-#  auth-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: auth-service/Dockerfile
-#    container_name: auth-service
-#    ports:
-#      - "8081:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: auth_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-must-be-at-least-32-characters}
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  auth-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: auth-service/Dockerfile
+    container_name: auth-service
+    ports:
+      - "8081:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: auth_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-must-be-at-least-32-characters}
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  customer-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: customer-service/Dockerfile
-#    container_name: customer-service
-#    ports:
-#      - "8082:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: customer_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  customer-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: customer-service/Dockerfile
+    container_name: customer-service
+    ports:
+      - "8082:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: customer_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  admin-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: admin-service/Dockerfile
-#    container_name: admin-service
-#    ports:
-#      - "8083:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: admin_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  admin-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: admin-service/Dockerfile
+    container_name: admin-service
+    ports:
+      - "8083:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: admin_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  manager-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: manager-service/Dockerfile
-#    container_name: manager-service
-#    ports:
-#      - "8084:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: manager_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  manager-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: manager-service/Dockerfile
+    container_name: manager-service
+    ports:
+      - "8084:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: manager_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  store-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: store-service/Dockerfile
-#    container_name: store-service
-#    ports:
-#      - "8085:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: store_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  store-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: store-service/Dockerfile
+    container_name: store-service
+    ports:
+      - "8085:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: store_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  order-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: order-service/Dockerfile
-#    container_name: order-service
-#    ports:
-#      - "8086:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: order_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  order-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: order-service/Dockerfile
+    container_name: order-service
+    ports:
+      - "8086:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: order_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
-#  payment-service:
-#    <<: *service-config
-#    build:
-#      context: ../../
-#      dockerfile: payment-service/Dockerfile
-#    container_name: payment-service
-#    ports:
-#      - "8087:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
-#      DB_HOST: eatcloud-db
-#      DB_PORT: 5432
-#      DB_NAME: payment_db
-#      DB_USER: ${DB_USER:-eatcloud_user}
-#      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
-#      REDIS_HOST: redis
-#      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
-#    depends_on:
-#      eatcloud-db:
-#        condition: service_healthy
-#      eureka-server:
-#        condition: service_healthy
+  payment-service:
+    <<: *service-config
+    build:
+      context: ../../
+      dockerfile: payment-service/Dockerfile
+    container_name: payment-service
+    ports:
+      - "8087:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
+      DB_HOST: eatcloud-db
+      DB_PORT: 5432
+      DB_NAME: payment_db
+      DB_USER: ${DB_USER:-eatcloud_user}
+      DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
+      REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+    depends_on:
+      eatcloud-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
 
 networks:
   eatcloud-network:
