--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,8 +1,10 @@
-server.port=8080
-spring.application.name=api-gateway
+# Docker Environment Configuration for API Gateway
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE:http://eureka-server:8761/eureka/}
+# Server Configuration
+server.port=8080
+
+# Eureka Client Configuration for Docker
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=api-gateway
 
@@ -19,5 +21,5 @@ spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCr
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].maxAge=3600
 
 # Logging Configuration
-logging.level.com.eatcloud.apigateway=DEBUG
-logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.eatcloud.apigateway=INFO
+logging.level.org.springframework.cloud.gateway=INFO
