Feat : order-service 분리

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8083
+server.port=8086
 spring.application.name=order-service
 
 # Database
@@ -7,7 +7,7 @@ spring.datasource.username=user
 spring.datasource.password=password
 
 # JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,10 +20,10 @@ eureka.instance.prefer-ip-address=true
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
-# Feign
-feign.circuitbreaker.enabled=true
-
-
+# REST API Services URLs
+services.customer-service.url=http://customer-service:8082
+services.store-service.url=http://store-service:8084
 
 # Logging
 logging.level.com.eatcloud.orderservice=DEBUG
+logging.level.org.springframework.web.client=DEBUG
