--- a/deploy/compose/.yml
+++ b/deploy/compose/.yml
@@ -236,7 +236,7 @@ services:
       dockerfile: order-service/Dockerfile
     container_name: order-service
     ports:
-      - "8086:8080"
+      - "8086:8086"
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-docker}
       DB_HOST: eatcloud-db
@@ -246,6 +246,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD:-devpassword123}
       REDIS_HOST: redis
       EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka
+      SERVER_PORT: 8086
     depends_on:
       eatcloud-db:
         condition: service_healthy
