Feat : payment-service 콜백 엔드포인트 추가

--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -5,13 +5,17 @@ eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=order-service
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/eatcloud_db
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+# JPA/Hibernate ?? - ???? ??? ??
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# SQL ??? ???? (Hibernate? ???? ??)
+spring.sql.init.mode=never
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
@@ -23,3 +27,5 @@ management.endpoint.health.show-details=always
 
 logging.level.com.eatcloud.orderservice=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
