--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.datasource.username=user
 spring.datasource.password=password
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=never
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
