--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=admin-service
 
+# admin-service
+store.admin.base-url=http://localhost:8085
+
+
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
