--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -6,3 +6,12 @@ eureka.instance.prefer-ip-address=true
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=profect.eatcloud@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.debug=true
+spring.mail.password=${MAIL_PASSWORD}
