Feat : 주문 생성 분산락 적용

--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -38,7 +38,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 
 	runtimeOnly 'org.postgresql:postgresql'
+	
+	// Redis dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.apache.commons:commons-pool2' // Lettuce connection pool support
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok'
