--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -23,6 +23,25 @@ management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
 
+# Redis Configuration
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.timeout=${REDIS_TIMEOUT:2000}ms
+spring.data.redis.database=${REDIS_DATABASE:0}
+# Lettuce Connection Pool (Spring Boot 3.x default)
+spring.data.redis.lettuce.pool.enabled=true
+spring.data.redis.lettuce.pool.max-active=${REDIS_POOL_MAX_ACTIVE:8}
+spring.data.redis.lettuce.pool.max-idle=${REDIS_POOL_MAX_IDLE:8}
+spring.data.redis.lettuce.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
+spring.data.redis.lettuce.pool.max-wait=-1ms
+spring.data.redis.lettuce.shutdown-timeout=100ms
+
+# Distributed Lock Configuration
+distributed.lock.timeout=5
+distributed.lock.retry.count=3
+distributed.lock.retry.delay=100
+
 # Logging
 logging.level.com.eatcloud.orderservice=DEBUG
 logging.level.org.springframework.web.client=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
