--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -17,10 +17,23 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # SQL ??? ???? (Hibernate? ???? ??)
 spring.sql.init.mode=never
 
-spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=6379
-spring.data.redis.timeout=2000ms
-spring.data.redis.database=0
+# Redis Configuration
+spring.data.redis.host=${REDIS_HOST:redis}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.timeout=${REDIS_TIMEOUT:2000}ms
+spring.data.redis.database=${REDIS_DATABASE:0}
+# Lettuce Connection Pool (Spring Boot 3.x default)
+spring.data.redis.lettuce.pool.enabled=true
+spring.data.redis.lettuce.pool.max-active=${REDIS_POOL_MAX_ACTIVE:8}
+spring.data.redis.lettuce.pool.max-idle=${REDIS_POOL_MAX_IDLE:8}
+spring.data.redis.lettuce.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
+spring.data.redis.lettuce.pool.max-wait=-1ms
+spring.data.redis.lettuce.shutdown-timeout=100ms
+
+# Distributed Lock Configuration
+distributed.lock.timeout=${DISTRIBUTED_LOCK_TIMEOUT:5}
+distributed.lock.retry.count=${DISTRIBUTED_LOCK_RETRY_COUNT:3}
+distributed.lock.retry.delay=${DISTRIBUTED_LOCK_RETRY_DELAY:100}
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
