--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       POSTGRES_DB: eatcloud_db
       POSTGRES_USER: eatcloud_user
       POSTGRES_PASSWORD: devpassword123
-      POSTGRES_MULTIPLE_DATABASES: auth_db,customer_db,admin_db,owner_db,store_db,order_db,payment_db
+      POSTGRES_MULTIPLE_DATABASES: auth_db,customer_db,admin_db,manager_db,store_db,order_db,payment_db
     volumes:
       - eatcloud_db_data:/var/lib/postgresql/data
       - ./deploy/compose/scripts/create-multiple-databases.sh:/docker-entrypoint-initdb.d/00-create-multiple-databases.sh:ro
