--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=admin-service
 
 # admin-service
 store.admin.base-url=http://localhost:8085
+customer.admin.base-url=http://localhost:8083   # customer-service
+manager.admin.base-url=http://localhost:8081    # auth/manager-service
+
 
 
 # Eureka
