Refactor: 비밀번호 변경
api-gateway config, filter 변경

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].maxAge=
 # Logging Configuration
 logging.level.com.eatcloud.apigateway=DEBUG
 logging.level.org.springframework.cloud.gateway=DEBUG
+
+jwt.secret=${JWT_SECRET}
