--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.debug=true
 spring.mail.password=${MAIL_PASSWORD}
+
+jwt.secret=${JWT_SECRET}
