Feat: payment view route 테스트

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -26,6 +26,11 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 # Toss Payments
 toss.secret-key=test_sk_D4yKeq5bgrpKRd0JYbLVGX0lzW6Y
+toss.api.base-url=https://api.tosspayments.com
+toss.client-key=test_ck_PBal2vxj81zE0aPZaJJw35RQgOAN
+#toss.secret-key=test_sk_EP59LybZ8BvPnakezLBG86GYo7pR
+toss.success.url=http://localhost : 8080/payment/success
+toss.fail.url=http://Localhost:8080/payment/fail
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
