fix: enable SQL schema initialization for customer service

--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -7,10 +7,15 @@ spring.datasource.username=${DB_USERNAME:user}
 spring.datasource.password=${DB_PASSWORD:password}
 
 # JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Database initialization
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.continue-on-error=false
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
