fix : ci/cd 파일 변경

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -185,7 +185,7 @@ jobs:
           ${{ env.ECR_REGISTRY }}/eatcloud/${{ matrix.service }}:${{ steps.short-sha.outputs.sha_short }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        platforms: linux/amd64
+        platforms: linux/arm64
 
     - name: Scan image for vulnerabilities
       run: |
