--- a/customer-service/src/main/resources/application-docker.properties
+++ b/customer-service/src/main/resources/application-docker.properties
@@ -15,10 +15,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.data.redis.host=${REDIS_HOST}
-spring.data.redis.port=6379
-spring.data.redis.timeout=2000ms
-spring.data.redis.database=0
+# Redis configuration (commented out temporarily)
+# spring.data.redis.host=${REDIS_HOST}
+# spring.data.redis.port=6379
+# spring.data.redis.timeout=2000ms
+# spring.data.redis.database=0
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
